--- a/Schilderijen/Paginas/schilderijen.css
+++ b/Schilderijen/Paginas/schilderijen.css
@@ -196,3 +196,46 @@ body.dark-mode button {
 body.dark-mode button:hover {
     background-color: red;
 }
+
+.nav-item.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.nav-item .dropbtn {
+    background-color: #A0B8C8;
+    color: black;
+    padding: 16px;
+    font-size: 18px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+}
+
+.nav-item .dropbtn:hover {
+    background-color: red;
+}
+
+.nav-item .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    z-index: 1;
+    margin-top: 10px;
+}
+
+.nav-item .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.nav-item .dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.nav-item.dropdown:hover .dropdown-content {
+    display: block;
+}
