--- a/Schilderijen/Paginas/tickets.css
+++ b/Schilderijen/Paginas/tickets.css
@@ -10,17 +10,13 @@ body {
 }
 
 .header {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    background-color: #A0B8C8;
+    display: grid;
+    grid-template-columns: auto 1fr auto; 
+    align-items: center;
     padding: 20px;
-    font-size: 24px;
-    font-weight: bold;
-    color: black;
-    display: flex;
-    justify-content: space-around;
+    background-color: #A0B8C8;
     z-index: 1000;
+    position: sticky; top: 0;
 }
 
 .container {
@@ -59,6 +55,7 @@ button:hover {
     background-color: red;
 }
 
+
 .nav-item a {
     text-decoration: none;
     color: black;
@@ -77,20 +74,6 @@ body.light-mode {
 body.dark-mode {
     background-color: #333;
     color: white;
-}
-
-.header {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    background-color: #A0B8C8;
-    padding: 20px;
-    font-size: 24px;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1000;
 }
 
 .mode-toggle {
@@ -184,10 +167,6 @@ body.dark-mode button:hover {
     border: none;
     cursor: pointer;
     text-align: center;
-}
-
-.nav-item .dropbtn:hover {
-    background-color: red;
 }
 
 .nav-item .dropdown-content {
